[gd_scene load_steps=3 format=3 uid="uid://dfuvifyeemyi6"]

[ext_resource type="Script" path="res://main.gd" id="1_u0683"]
[ext_resource type="PackedScene" path="res://addons/curvature_baker/curvature_baker.tscn" id="2_0f7yh"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u0683")

[node name="ResultTextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.303
anchor_top = 0.174
anchor_right = 0.697
anchor_bottom = 0.826
offset_left = -0.556
offset_top = 0.247993
offset_right = 0.555969
offset_bottom = -0.248047
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -104.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ChooseMeshButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Choose Model..."

[node name="SaveButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
editor_description = "Disabled until a map is generated."
layout_mode = 2
text = "Save Result"

[node name="WorkingPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.5
offset_top = -43.0
offset_right = 84.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="WorkingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -13.0
offset_right = 39.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Working..."

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.gltf, *.glb ; GLTF Models")

[node name="CurvatureBaker" parent="." instance=ExtResource("2_0f7yh")]

[connection signal="pressed" from="HBoxContainer/ChooseMeshButton" to="." method="_on_choose_mesh_button_pressed"]
[connection signal="pressed" from="HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
